# rust_menu

./: Cargo.toml  README.md  copy_exe.sh
resouces/EXPLORER/: explorer.rs  path_Partenza.txt
src/: explorer.rs  main.rs  menu_principale.rs  sottomenu.rs  traits.rs
