[package]
name = "menu_clap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# dipendenze per il tuo progetto
[dependencies]
# clap = "2"
# servono per gestire le enum piu' facilmente (es. variante <-> stringa)
strum = "0.25"
strum_macros = "0.25"
terminal= {version= "0.2", features = ["crossterm-backend"]}
